--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,45 @@
+.obs-icon-button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  padding: 2px;
+  transition: all 300ms;
+}
+
+.obs-icon-button:hover {
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 5px 0px #00000017;
+}
+
+.obs-icon-button:hover > svg {
+  scale: 1.1;
+}
+
+
 .file-node {
   display: flex;
   flex-direction: column;
 }
+
+.file-node_kind-parent {
+  flex-direction: column-reverse;
+}
+
+.file-node_kind-child {
+  flex-direction: column;
+}
+
 
 .file-node__container {
   display: flex;
   flex-direction: row;
   padding: 4px;
   margin-left: 0px;
-  padding-left: 12px;
   cursor: pointer;
   transition: all 300ms;
+  gap: 4px;
 }
 
 .file-node__container_kind-root {
@@ -21,7 +50,6 @@
 .file-node__container_highlight {
   background: rgb(230, 230, 230);
 }
-
 
 .file-node__relatives {
   display: flex;
@@ -37,7 +65,7 @@
 
 
 .file-node__indent {
-  padding-left: 12px;
+  padding-left: 14px;
   border-right: 1px solid #bbbbbbad;
   transition: all 300ms
 }
