--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@
 	opacity: 0.4;
 }
 
+.obs-icon_size-xs svg {
+	height: var(--icon-xs);
+	width: var(--icon-xs);
+}
 .obs-icon_size-s svg {
 	height: var(--icon-s);
 	width: var(--icon-s);
@@ -76,10 +80,11 @@
 
 .file-node__container_kind-root {
 	font-weight: var(--font-semibold);
-	font-size: var(--font-ui-medium);
+	font-size: var(--font-ui-small);
 	border-radius: var(--radius-s);
 	padding: var(--size-4-2) var(--size-4-3);
 	background-color: var(--background-primary);
+	box-shadow: 0 0 0 var(--border-width) var(--background-modifier-border);
 }
 
 .file-node__container_highlight {
@@ -125,16 +130,21 @@
 }
 
 .top-panel {
+	padding: var(--size-4-2);
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
 	align-items: center;
-	margin-bottom: var(--size-2-2);
 	color: var(--text-muted);
-	gap: var(--size-4-2);
+	gap: var(--size-4-3);
 }
 
 .top-panel_history {
 	display: flex;
 	flex-direction: row;
+	gap: var(--size-4-1);
+}
+
+[data-type="hierarchy-view"] .view-content {
+	padding-top: 0;
 }
