--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@
 	font-size: var(--font-ui-small);
 	border-radius: var(--radius-s);
 	padding: var(--size-4-2) var(--size-4-3);
+	padding-right: var(--size-4-1);
 	background-color: var(--background-primary);
 	box-shadow: 0 0 0 var(--border-width) var(--background-modifier-border);
 }
@@ -101,6 +102,12 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	opacity: 0;
+	transition: opacity 300ms;
+}
+
+.file-node__container_highlight .file-node__content-side {
+	opacity: 1;
 }
 
 .file-node__relatives {
