--- a/styles.css
+++ b/styles.css
@@ -5,31 +5,7 @@
 
 	border-radius: var(--radius-s);
 
-	padding: var(--size-2-2);
-
 	transition: background-color 300ms;
-}
-
-.obs-icon_clickable {
-	cursor: var(--cursor-link);
-}
-
-.obs-icon_clickable:hover {
-	background: rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 0px 5px 0px #00000017;
-}
-
-.obs-icon_clickable > svg {
-	transition: scale 100ms;
-	scale: 1;
-}
-
-.obs-icon_clickable:hover > svg {
-	scale: 1.1;
-}
-
-.obs-icon_disabled {
-	opacity: 0.4;
 }
 
 .obs-icon_size-xs svg {
@@ -54,6 +30,33 @@
 	height: var(--icon-xl);
 	width: var(--icon-xl);
 	stroke-width: var(--icon-xl-stroke-width);
+}
+
+.clickable {
+	border-radius: var(--radius-s);
+	padding: var(--size-2-2);
+	cursor: var(--cursor-link);
+
+	transition: scale 100ms;
+}
+
+.clickable_bypass {
+	border-radius: var(--radius-s);
+	padding: var(--size-2-2);
+}
+
+.clickable[aria-disabled="true"] {
+	opacity: 0.4;
+	cursor: not-allowed;
+}
+
+.clickable:not([aria-disabled="true"]):hover {
+	background: rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 5px 0px #00000017;
+}
+
+.clickable:not([aria-disabled="true"]):active {
+	scale: 0.8;
 }
 
 .collapsible-div {
@@ -134,6 +137,15 @@
 }
 
 .file-node__content {
+	display: flex;
+	gap: var(--size-2-2);
+}
+
+.file-node__content-last-icon {
+	opacity: 0.4;
+}
+
+.file-node__content-text {
 	line-height: var(--line-height-tight);
 	font-size: var(--nav-item-size);
 
@@ -214,4 +226,10 @@
 
 [data-type="hierarchy-view"] .view-content {
 	padding-top: 0;
+}
+
+.sort-mode__container {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
 }
