--- a/src/components-base/ObsIcon/ObsIcon.scss
+++ b/src/components-base/ObsIcon/ObsIcon.scss
@@ -1,4 +1,4 @@
-.obsIcon {
+.root {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -9,25 +9,25 @@
 }
 
 .size {
-	&xs svg {
+	&_xs svg {
 		height: var(--icon-xs);
 		width: var(--icon-xs);
 		stroke-width: var(--icon-xs-stroke-width);
 	}
 
-	&s svg {
+	&_s svg {
 		height: var(--icon-s);
 		width: var(--icon-s);
 		stroke-width: var(--icon-s-stroke-width);
 	}
 
-	&m svg {
+	&_m svg {
 		height: var(--icon-m);
 		width: var(--icon-m);
 		stroke-width: var(--icon-m-stroke-width);
 	}
 
-	&xl svg {
+	&_xl svg {
 		height: var(--icon-xl);
 		width: var(--icon-xl);
 		stroke-width: var(--icon-xl-stroke-width);
